--- a/dataset-cartography/measuring-hate-speech/cartography_plotting.ipynb
+++ b/dataset-cartography/measuring-hate-speech/cartography_plotting.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "cartography_df = pd.read_csv('measuring-hate-speech-uc-berk-data-cartography.csv', index_col=0)\n",
+    "cartography_df = pd.read_csv('./results/measuring-hate-speech-uc-berk-data-cartography.csv', index_col=0)\n",
     "cartography_df['agreement_factor'] = cartography_df['annotator_agreement_factor']\n",
     "cartography_df['agreement_factor'] = cartography_df['agreement_factor'].apply(lambda x: 0.6 if x == 0.4 else x)\n",
     "cartography_df.head()"
