plots and sbic v2 data cartography

--- a/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb
+++ b/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./results/agree_to_disagree_train.json', 'r') as file:\n",
+    "with open('../../data/agree_to_disagree/agree_to_disagree_train.json', 'r') as file:\n",
     "    data = json.load(file)"
    ]
   },
