--- a/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb
+++ b/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb
@@ -3483,7 +3483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cartography_df_merged.to_csv('full_cartography.csv', index=False)"
+    "cartography_df_merged.to_csv('./results/full_cartography.csv', index=False)"
    ]
   },
   {
@@ -3755,6 +3755,27 @@
    ],
    "source": [
     "both_votes_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'both_votes_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/abhishekanand/interstellar/research-projects/DataFirst-Noise-And-Bias/noise-and-bias/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb Cell 70\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/abhishekanand/interstellar/research-projects/DataFirst-Noise-And-Bias/noise-and-bias/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb#Y126sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m both_votes_df\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'both_votes_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "both_votes_df.head()"
    ]
   },
   {
