plots for final presentation

--- a/dataset-cartography/kennedy/cartography_plotting_disco.ipynb
+++ b/dataset-cartography/kennedy/cartography_plotting_disco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "4        True                  1.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "4        True                  1.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "31652"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "4      0.305830      0.388578       1.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "31652"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2671,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2789,7 +2789,7 @@
        "[7912 rows x 3 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2800,16 +2800,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b479a350>"
+       "<matplotlib.collections.PathCollection at 0x2b6efabd0>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2865,7 +2865,7 @@
        "<Axes: xlabel='group_count', ylabel='f1_macro'>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2886,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2895,7 +2895,7 @@
        "<Axes: xlabel='group_count', ylabel='count'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2916,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3034,7 +3034,7 @@
        "[7912 rows x 3 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3054,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3084,7 +3084,7 @@
        "757"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3095,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3104,7 +3104,7 @@
        "112197"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3115,7 +3115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3124,7 @@
        "106210"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3142,7 +3142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3151,7 +3151,7 @@
        "7155"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3172,7 +3172,7 @@
        "array([   1,    2,    3, ..., 7895, 7897, 7901])"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3183,7 +3183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3239,55 +3239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20766 entries, 12 to 112085\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column                   Non-Null Count  Dtype  \n",
-      "---  ------                   --------------  -----  \n",
-      " 0   Aindex                   20766 non-null  int64  \n",
-      " 1   Mindex                   20766 non-null  int64  \n",
-      " 2   text                     20766 non-null  object \n",
-      " 3   label_0_mean             20766 non-null  float64\n",
-      " 4   label_0_std              20766 non-null  float64\n",
-      " 5   label_0_last             20766 non-null  float64\n",
-      " 6   label_1_mean             20766 non-null  float64\n",
-      " 7   label_1_std              20766 non-null  float64\n",
-      " 8   label_1_last             20766 non-null  float64\n",
-      " 9   label_2_mean             20766 non-null  float64\n",
-      " 10  label_2_std              20766 non-null  float64\n",
-      " 11  label_2_last             20766 non-null  float64\n",
-      " 12  label                    20766 non-null  float64\n",
-      " 13  pred                     20766 non-null  int64  \n",
-      " 14  comment_id               20766 non-null  int64  \n",
-      " 15  annotator_id             20766 non-null  int64  \n",
-      " 16  hate_speech_score        20766 non-null  float64\n",
-      " 17  confidence               20766 non-null  float64\n",
-      " 18  variability              20766 non-null  float64\n",
-      " 19  correctness              20766 non-null  float64\n",
-      " 20  is_correct               20766 non-null  bool   \n",
-      " 21  majority_label           20766 non-null  float64\n",
-      " 22  agreement_factor         20766 non-null  float64\n",
-      " 23  agreement_factor_rd      20766 non-null  float64\n",
-      " 24  disagrees_with_majority  20766 non-null  bool   \n",
-      "dtypes: bool(2), float64(17), int64(5), object(1)\n",
-      "memory usage: 3.8+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cartography_df_low_conf_in_majority = cartography_df_greater_than_10_anots[cartography_df_greater_than_10_anots['comment_id'].isin(low_confidence_comment_ids)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3304,7 +3265,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3331,7 +3292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3340,7 +3301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3318,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3380,6 +3341,124 @@
     "# plt.gca().set_xlabel('Agreement Factor', fontsize=14)\n",
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Joining and Saving Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 112197 entries, 0 to 112196\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column                   Non-Null Count   Dtype  \n",
+      "---  ------                   --------------   -----  \n",
+      " 0   Aindex                   112197 non-null  int64  \n",
+      " 1   Mindex                   112197 non-null  int64  \n",
+      " 2   text                     112197 non-null  object \n",
+      " 3   label_0_mean             112197 non-null  float64\n",
+      " 4   label_0_std              112197 non-null  float64\n",
+      " 5   label_0_last             112197 non-null  float64\n",
+      " 6   label_1_mean             112197 non-null  float64\n",
+      " 7   label_1_std              112197 non-null  float64\n",
+      " 8   label_1_last             112197 non-null  float64\n",
+      " 9   label_2_mean             112197 non-null  float64\n",
+      " 10  label_2_std              112197 non-null  float64\n",
+      " 11  label_2_last             112197 non-null  float64\n",
+      " 12  label                    112197 non-null  float64\n",
+      " 13  pred                     112197 non-null  int64  \n",
+      " 14  comment_id               112197 non-null  int64  \n",
+      " 15  annotator_id             112197 non-null  int64  \n",
+      " 16  hate_speech_score        112197 non-null  float64\n",
+      " 17  confidence_x             112197 non-null  float64\n",
+      " 18  variability_x            112197 non-null  float64\n",
+      " 19  correctness              112197 non-null  float64\n",
+      " 20  is_correct               112197 non-null  bool   \n",
+      " 21  majority_label           112197 non-null  float64\n",
+      " 22  agreement_factor         112197 non-null  float64\n",
+      " 23  agreement_factor_rd      112197 non-null  float64\n",
+      " 24  disagrees_with_majority  112197 non-null  bool   \n",
+      " 25  confidence_y             112197 non-null  float64\n",
+      " 26  variability_y            112197 non-null  float64\n",
+      "dtypes: bool(2), float64(19), int64(5), object(1)\n",
+      "memory usage: 22.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cartography_df_merged = cartography_df.merge(cartography_majority[['comment_id', 'confidence', 'variability']], on='comment_id')\n",
+    "cartography_df_merged.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 112197 entries, 0 to 112196\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column                   Non-Null Count   Dtype  \n",
+      "---  ------                   --------------   -----  \n",
+      " 0   Aindex                   112197 non-null  int64  \n",
+      " 1   Mindex                   112197 non-null  int64  \n",
+      " 2   text                     112197 non-null  object \n",
+      " 3   label_0_mean             112197 non-null  float64\n",
+      " 4   label_0_std              112197 non-null  float64\n",
+      " 5   label_0_last             112197 non-null  float64\n",
+      " 6   label_1_mean             112197 non-null  float64\n",
+      " 7   label_1_std              112197 non-null  float64\n",
+      " 8   label_1_last             112197 non-null  float64\n",
+      " 9   label_2_mean             112197 non-null  float64\n",
+      " 10  label_2_std              112197 non-null  float64\n",
+      " 11  label_2_last             112197 non-null  float64\n",
+      " 12  label                    112197 non-null  float64\n",
+      " 13  pred                     112197 non-null  int64  \n",
+      " 14  comment_id               112197 non-null  int64  \n",
+      " 15  annotator_id             112197 non-null  int64  \n",
+      " 16  hate_speech_score        112197 non-null  float64\n",
+      " 17  confidence               112197 non-null  float64\n",
+      " 18  variability              112197 non-null  float64\n",
+      " 19  correctness              112197 non-null  float64\n",
+      " 20  is_correct               112197 non-null  bool   \n",
+      " 21  majority_label           112197 non-null  float64\n",
+      " 22  agreement_factor         112197 non-null  float64\n",
+      " 23  agreement_factor_rd      112197 non-null  float64\n",
+      " 24  disagrees_with_majority  112197 non-null  bool   \n",
+      " 25  majority_confidence      112197 non-null  float64\n",
+      " 26  majority_variability     112197 non-null  float64\n",
+      "dtypes: bool(2), float64(19), int64(5), object(1)\n",
+      "memory usage: 22.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cartography_df_merged.rename(columns={'confidence_x': 'confidence', 'variability_x': 'variability', 'confidence_y': 'majority_confidence', 'variability_y': 'majority_variability'}, inplace=True)\n",
+    "cartography_df_merged.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cartography_df_merged.to_csv('./results/full_cartography.csv', index=False)"
    ]
   },
   {
