--- a/dataset-cartography/sbic_v2/cartography_plotting_disco.ipynb
+++ b/dataset-cartography/sbic_v2/cartography_plotting_disco.ipynb
@@ -1119,7 +1119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5902464103411553"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cartography_df.groupby('Mindex').size().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1148,7 @@
        "70535"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1406,7 @@
        "4        True               0          0.666667                  0.8  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1637,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1669,7 @@
        "Name: Aindex, Length: 307, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1706,7 @@
        "1585"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1735,7 @@
        "  Text(0, 0.6000000000000001, '0.6')])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1744,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1826,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1835,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1899,7 @@
        "<Axes: xlabel='disagrees_with_majority', ylabel='Count'>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1907,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2051,7 @@
        "  Text(0, 70000.0, '70000')])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2058,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2095,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2128,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2221,7 @@
        "4     0.869109  0.862252         1144"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2354,7 @@
        "[307 rows x 3 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2345,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2463,7 +2483,7 @@
        "[307 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2474,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2503,7 @@
        "197"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2494,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2503,7 +2523,7 @@
        "70535"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2514,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2523,7 +2543,7 @@
        "69229"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2541,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2570,7 @@
        "110"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2562,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2599,7 @@
        "       106, 107, 108, 110, 114, 179])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2590,7 +2610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2704,7 +2724,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2731,7 +2751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2813,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2816,6 +2836,116 @@
     "# plt.gca().set_xlabel('Agreement Factor', fontsize=14)\n",
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Joining and saving data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 70535 entries, 0 to 70534\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Aindex                   70535 non-null  int64  \n",
+      " 1   Mindex                   70535 non-null  int64  \n",
+      " 2   text                     70535 non-null  object \n",
+      " 3   label_0_mean             70535 non-null  float64\n",
+      " 4   label_0_std              70535 non-null  float64\n",
+      " 5   label_0_last             70535 non-null  float64\n",
+      " 6   label_1_mean             70535 non-null  float64\n",
+      " 7   label_1_std              70535 non-null  float64\n",
+      " 8   label_1_last             70535 non-null  float64\n",
+      " 9   label                    70535 non-null  int64  \n",
+      " 10  pred                     70535 non-null  int64  \n",
+      " 11  annotator_id             70535 non-null  int64  \n",
+      " 12  comment_id               70535 non-null  object \n",
+      " 13  confidence_x             70535 non-null  float64\n",
+      " 14  variability_x            70535 non-null  float64\n",
+      " 15  correctness              70535 non-null  float64\n",
+      " 16  is_correct               70535 non-null  bool   \n",
+      " 17  majority_label           70535 non-null  int64  \n",
+      " 18  agreement_factor         70535 non-null  float64\n",
+      " 19  agreement_factor_rd      70535 non-null  float64\n",
+      " 20  disagrees_with_majority  70535 non-null  bool   \n",
+      " 21  confidence_y             70535 non-null  float64\n",
+      " 22  variability_y            70535 non-null  float64\n",
+      "dtypes: bool(2), float64(13), int64(6), object(2)\n",
+      "memory usage: 12.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cartography_df_merged = cartography_df.merge(cartography_majority[['comment_id', 'confidence', 'variability']], on='comment_id')\n",
+    "cartography_df_merged.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 70535 entries, 0 to 70534\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Aindex                   70535 non-null  int64  \n",
+      " 1   Mindex                   70535 non-null  int64  \n",
+      " 2   text                     70535 non-null  object \n",
+      " 3   label_0_mean             70535 non-null  float64\n",
+      " 4   label_0_std              70535 non-null  float64\n",
+      " 5   label_0_last             70535 non-null  float64\n",
+      " 6   label_1_mean             70535 non-null  float64\n",
+      " 7   label_1_std              70535 non-null  float64\n",
+      " 8   label_1_last             70535 non-null  float64\n",
+      " 9   label                    70535 non-null  int64  \n",
+      " 10  pred                     70535 non-null  int64  \n",
+      " 11  annotator_id             70535 non-null  int64  \n",
+      " 12  comment_id               70535 non-null  object \n",
+      " 13  confidence               70535 non-null  float64\n",
+      " 14  variability              70535 non-null  float64\n",
+      " 15  correctness              70535 non-null  float64\n",
+      " 16  is_correct               70535 non-null  bool   \n",
+      " 17  majority_label           70535 non-null  int64  \n",
+      " 18  agreement_factor         70535 non-null  float64\n",
+      " 19  agreement_factor_rd      70535 non-null  float64\n",
+      " 20  disagrees_with_majority  70535 non-null  bool   \n",
+      " 21  majority_confidence      70535 non-null  float64\n",
+      " 22  majority_variability     70535 non-null  float64\n",
+      "dtypes: bool(2), float64(13), int64(6), object(2)\n",
+      "memory usage: 12.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cartography_df_merged.rename(columns={'confidence_x': 'confidence', 'variability_x': 'variability', 'confidence_y': 'majority_confidence', 'variability_y': 'majority_variability'}, inplace=True)\n",
+    "cartography_df_merged.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cartography_df_merged.to_csv('./results/full_cartography.csv', index=False)"
    ]
   },
   {
